--- a/pom.xml
+++ b/pom.xml
@@ -28,10 +28,10 @@
                     <archive>
                         <manifest>
                             <addClasspath>false</addClasspath>
-                            <mainClass>com.ratplugin.RatPlugin</mainClass>
+                            <mainClass>me.wpkg.ratplugin.RatPlugin</mainClass>
                         </manifest>
                         <manifestEntries>
-                            <Plugin-Main-Class>com.ratplugin.RatPlugin</Plugin-Main-Class>
+                            <Plugin-Main-Class>me.wpkg.ratplugin.RatPlugin</Plugin-Main-Class>
                         </manifestEntries>
                     </archive>
                     <descriptors>
