--- a/pom.xml
+++ b/pom.xml
@@ -21,18 +21,16 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>3.4.2</version>
                 <configuration>
                     <finalName>${project.artifactId}</finalName>
                     <archive>
                         <manifest>
                             <addClasspath>false</addClasspath>
-                            <mainClass>me.wpkg.ratplugin.RatPlugin</mainClass>
+                            <mainClass>me.wpkg.cli.main.Main</mainClass>
                         </manifest>
-                        <manifestEntries>
-                            <Plugin-Main-Class>me.wpkg.ratplugin.RatPlugin</Plugin-Main-Class>
-                        </manifestEntries>
                     </archive>
                     <descriptors>
                         <descriptor>${project.basedir}/jar-with-deps.xml</descriptor>
